; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_gl.c_gl2_load_texture_image.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_gl.c_gl2_load_texture_image.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GL_CAPS_TEX_STORAGE = common dso_local global i32 0, align 4
@GL_BGRA_EXT = common dso_local global i64 0, align 8
@GL_CAPS_GLES3_SUPPORTED = common dso_local global i32 0, align 4
@GL_CAPS_TEX_STORAGE_EXT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i64, i64, i32, i32, i64, i32, i32, i32*)* @gl2_load_texture_image to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gl2_load_texture_image(i32 %0, i64 %1, i64 %2, i32 %3, i32 %4, i64 %5, i32 %6, i32 %7, i32* %8) #0 {
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i64, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32*, align 8
  %19 = alloca i32, align 4
  store i32 %0, i32* %10, align 4
  store i64 %1, i64* %11, align 8
  store i64 %2, i64* %12, align 8
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store i64 %5, i64* %15, align 8
  store i32 %6, i32* %16, align 4
  store i32 %7, i32* %17, align 4
  store i32* %8, i32** %18, align 8
  %20 = load i32, i32* @GL_CAPS_TEX_STORAGE, align 4
  store i32 %20, i32* %19, align 4
  %21 = load i32, i32* %19, align 4
  %22 = call i64 @gl_check_capability(i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %35

24:                                               ; preds = %9
  %25 = load i64, i64* %12, align 8
  %26 = load i64, i64* @GL_BGRA_EXT, align 8
  %27 = icmp ne i64 %25, %26
  br i1 %27, label %28, label %35

28:                                               ; preds = %24
  %29 = call i32 @gl2_size_format(i64* %12)
  %30 = load i32, i32* %10, align 4
  %31 = load i64, i64* %12, align 8
  %32 = load i32, i32* %13, align 4
  %33 = load i32, i32* %14, align 4
  %34 = call i32 @glTexStorage2D(i32 %30, i32 1, i64 %31, i32 %32, i32 %33)
  br label %47

35:                                               ; preds = %24, %9
  %36 = call i32 @gl2_size_format(i64* %12)
  %37 = load i32, i32* %10, align 4
  %38 = load i64, i64* %11, align 8
  %39 = load i64, i64* %12, align 8
  %40 = load i32, i32* %13, align 4
  %41 = load i32, i32* %14, align 4
  %42 = load i64, i64* %15, align 8
  %43 = load i32, i32* %16, align 4
  %44 = load i32, i32* %17, align 4
  %45 = load i32*, i32** %18, align 8
  %46 = call i32 @glTexImage2D(i32 %37, i64 %38, i64 %39, i32 %40, i32 %41, i64 %42, i32 %43, i32 %44, i32* %45)
  br label %47

47:                                               ; preds = %35, %28
  ret void
}

declare dso_local i64 @gl_check_capability(i32) #1

declare dso_local i32 @gl2_size_format(i64*) #1

declare dso_local i32 @glTexStorage2D(i32, i32, i64, i32, i32) #1

declare dso_local i32 @glTexImage2D(i32, i64, i64, i32, i32, i64, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
